# apple_ocr

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml  test_page24_diagnosis.json
.github/workflows/: release.yml  test.yml
apple_ocr/: api.py  cli.py  ocr_client.py  overlay_builder.py  page_parser.py  pdf_to_images.py
apple_ocr/scripts/: __init__.py  concat_texts.py
examples/: demo.py
scripts/: analyze_pdf_pages.py  debug_swift_ocr.py  diagnose_page.py  fix_page_with_swift.py  make_test_pdf.py  prepare_release.sh  test_ocr_result.py
swift/OCRBridge/: Package.swift
swift/OCRBridge/Sources/OCRBridge/: main.swift
tests/: test_cli.py  test_images_cli.py  test_integration.py  test_ocr_client.py  test_overlay_builder.py  test_page_parser.py
