[project]
name = "apple-ocr"
version = "0.2.0"
description = "高质量中英文OCR工具：Python + Swift Vision，支持GPU加速"
authors = [{ name = "apple_ocr", email = "apple_ocr@example.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
keywords = ["ocr", "pdf", "vision", "apple", "chinese", "gpu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
  "pypdf>=3.0.0",
  "pdf2image>=1.17.0",
  "reportlab>=4.0.0",
  "pymupdf>=1.25.0",
  "tqdm>=4.66.0",
  "Pillow>=10.0.0",
  "ocrmypdf>=14.4.0",
  "ocrmypdf-appleocr>=0.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0"
]

[project.scripts]
apple-ocr = "apple_ocr.cli:main"
apple-ocr-concat = "apple_ocr.scripts.concat_texts:main"

[tool.setuptools.packages.find]
include = ["apple_ocr*"]
exclude = ["swift*"]

[tool.uv]
package = true
# uv will use this pyproject for dependency resolution

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=apple_ocr",
    "--cov-report=term-missing",
    "--cov-report=html",
]
filterwarnings = [
    "ignore:.*SwigPyObject.*:DeprecationWarning",
    "ignore:.*SwigPyPacked.*:DeprecationWarning",
    "ignore:.*swigvarlink.*:DeprecationWarning",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["apple_ocr"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[dependency-groups]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]
